--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "dependencies": {
     "codemirror": "^5.65.15",
+    "express": "^4.18.2",
     "react": "17.0.2",
     "react-codemirror2": "^7.3.0",
     "react-dom": "17.0.2",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "ws": "^8.14.2"
   },
   "scripts": {
     "start": "react-scripts start",
