--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "ws": "^8.14.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
