--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "codemirror": "^5.65.15",
     "express": "^4.18.2",
+    "firebase": "^10.4.0",
     "react": "17.0.2",
     "react-codemirror2": "^7.3.0",
     "react-dom": "17.0.2",
