--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "private": true,
   "dependencies": {
     "codemirror": "^5.65.15",
+    "connect-flash": "^0.1.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "firebase": "^10.4.0",
+    "mongoose": "^7.6.1",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "react": "17.0.2",
     "react-codemirror2": "^7.3.0",
     "react-dom": "17.0.2",
