--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "codemirror": "^5.65.15",
     "connect-flash": "^0.1.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "express-validator": "^7.0.1",
     "firebase": "^10.4.0",
+    "helmet": "^7.0.0",
     "mongoose": "^7.6.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
