--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "ws": "^8.14.2"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "node server.js & react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
